--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "type": "plugin",
     "category": "python_data",
     "plugins": {
+      "web": [
+        {
+          "type": "manager",
+          "id": "processing"
+        }
+      ],
       "python": [
         {
           "type": "namespace",
