yo phovea:update

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -20,7 +20,7 @@
     "sextensions": [
       {
         "type": "namespace",
-        "id": "caleydo_processing",
+        "id": "phovea_processing",
         "module": "processing",
         "extras": {
           "namespace": "/api/processing"
@@ -28,7 +28,7 @@
       },
       {
         "type": "processing-task",
-        "id": "caleydo_processing_task",
+        "id": "phovea_processing_task",
         "module": "tasks",
         "extras": {}
       }
@@ -44,6 +44,7 @@
     "libraryAliases": {},
     "entries": "./index.js",
     "ignores": [],
-    "today": "Wed, 02 Nov 2016 21:52:56 GMT"
+    "today": "Wed, 02 Nov 2016 21:52:56 GMT",
+    "libraryExternals": []
   }
 }
