--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ before_install:
 
 install:
   - npm install
-  - sudo apt-get install cython
+  - sudo apt-get install -y cython
+  - sudo apt-get install -y `cat debian_packages.txt | tr '\r' ' ' | tr '\n' ' '`
   - pip install -r requirements_dev.txt
   - pip install -r requirements.txt
 
