--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -2,6 +2,7 @@
   "generator-phovea": {
     "type": "lib-service",
     "name": "phovea_processing_queue",
+	"serviceName": "celery",
     "author": "The Caleydo Team",
     "githubAccount": "phovea",
     "modules": [
