--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "pretest:web": "npm run compile",
     "pretest:python": "npm run check",
     "posttest:web": "npm run lint",
-    "predist:web": "npm run build"
+    "predist:web": "npm run build",
+    "predocker": "npm run build",
+    "docker": "docker build -t phovea_processing_queue -f deploy/Dockerfile .",
+    "docker:dev": "docker build -t phovea_processing_queue -f deploy/Dockerfile_dev .",
+    "prepublish": "npm run build"
   },
   "files": [
     "src",
