--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ before_install:
 
 install:
   - npm install
-  - sudo apt-get install -y cython
-  - sudo apt-get install -y `cat debian_packages.txt | tr '\r' ' ' | tr '\n' ' '`
+  - (!(test -f docker_packages.txt) || (cat docker_packages.txt | xargs sudo apt-get install -y))
   - pip install -r requirements_dev.txt
   - pip install -r requirements.txt
 
