--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,9 +1,11 @@
-FROM skiftcreative/supervisor:2.7
+FROM python:2.7
 
 MAINTAINER Samuel Gratzl <samuel.gratzl@datavisyn.io>
-
-RUN mkdir -p /phovea/app /phovea/run
 WORKDIR /phovea
+
+# create dirs and install supervisor
+RUN mkdir -p /phovea/app /phovea/run && apt-get update && apt-get install -y supervisor
+CMD ["supervisord", "-n"]
 
 COPY ./deploy/supervisord.conf /etc/supervisor/conf.d/phovea_service.conf
 
@@ -11,4 +13,4 @@ COPY ./deploy/supervisord.conf /etc/supervisor/conf.d/phovea_service.conf
 COPY requirements*.txt docker_packages.txt ./
 RUN (!(test -f docker_packages.txt) || (cat docker_packages.txt | xargs apt-get install -y)) && pip install --no-cache-dir -r requirements.txt
 
-COPY . ./app/
+COPY ./build/source ./app/
