--- a/deploy/Dockerfile_dev
+++ b/deploy/Dockerfile_dev
@@ -11,4 +11,7 @@ RUN apt-get install -y nodejs
 COPY requirements*.txt docker_packages.txt ./
 RUN (!(test -f docker_packages.txt) || (cat docker_packages.txt | xargs apt-get install -y)) && pip install --no-cache-dir -r requirements.txt && (pip install --no-cache-dir -r requirements_dev.txt)
 
-CMD ["python", "phovea_server", "--use_reloader", "--env", "dev", "celery"]
+ARG env=dev
+ARG service=celery
+CMD ["python", "phovea_server", "--use_reloader", "--env", $env, $service]
+EXPOSE 80
