yo phovea:update

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -37,7 +37,7 @@
     "libraries": [],
     "unknown": {
       "requirements": [
-        "celery[redis,auth,msgpack]==4.0.0rc4"
+        "celery[redis,auth,msgpack]==4.0.1"
       ],
       "debianPackages": [],
       "redhatPackages": []
