--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
   "name": "phovea_processing_queue",
   "description": "Process long-running tasks in the background using Celery.",
   "homepage": "https://phovea.caleydo.org",
-  "version": "0.0.1-SNAPSHOT",
+  "version": "0.0.5",
   "author": {
     "name": "The Caleydo Team",
     "email": "contact@caleydo.org",
