--- a/phovea_processing_queue/config.json
+++ b/phovea_processing_queue/config.json
@@ -7,6 +7,6 @@
     "broker": "redis://${host}:${port}/${db}",
     "backend": "redis://${host}:${port}/${db}",
     "expires": 3600,
-    "argv": "worker -P gevent -l info --logfile=logs/%n%I.log"
+    "argv": "worker -P gevent -l info"
   }
 }
