--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "iojs": ">= 3"
   },
   "dependencies": {
-    "phovea_core": "github:phovea/phovea_core#feature_update_dependencies"
+    "phovea_core": "github:phovea/phovea_core#develop"
   },
   "name": "phovea_processing_queue",
   "description": "Process long-running tasks in the background using Celery.",
