--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "compile": "tsc",
     "lint": "tslint -c tslint.json src/**.ts tests/**.ts",
     "docs": "npm run docs:web && npm run docs:python",
-    "prebuild": "node -e \"process.exit(process.env.PHOVEA_SKIP_TESTS === undefined?1:0)\" || npm run test",
+    "prebuild": "echo hybrid",
     "posttest": "echo hybrid",
     "test:watch": "karma start --autoWatch=true --singleRun=false",
     "build:dev": "webpack",
@@ -19,14 +19,14 @@
     "release:major": "npm version major && npm publish && git push --follow-tags",
     "release:minor": "npm version minor && npm publish && git push --follow-tags",
     "release:patch": "npm version patch && npm publish && git push --follow-tags",
-    "test:web": "karma start",
+    "test:web": "test ! -d tests || karma start",
     "test:python": "test ! -d tests || python setup.py test",
     "dist:web": "mkdirp dist && cd build && tar cvzf ../dist/phovea_processing_queue.tar.gz *",
     "dist:python": "python setup.py bdist_egg",
     "pretest:web": "npm run compile",
     "pretest:python": "npm run check",
     "posttest:web": "npm run lint",
-    "predist:web": "npm run build",
+    "predist:web": "npm run build:web && npm run docs:web",
     "predocker": "npm run build",
     "docker": "docker build -t phovea_processing_queue -f deploy/Dockerfile .",
     "docker:dev": "docker build -t phovea_processing_queue -f deploy/Dockerfile_dev .",
@@ -34,7 +34,10 @@
     "docs:web": "typedoc --options typedoc.json src/**.ts",
     "docs:python": "echo todo creating docs...",
     "build:python": "python -c \"from distutils.dir_util import mkpath ; mkpath('./build/source')\" && (tar -c ./phovea_processing_queue --exclude '*.pyc' | tar -xC build/source)",
-    "build:web": "webpack --env prod"
+    "build:web": "webpack --env prod",
+    "prebuild:python": "node -e \"process.exit(process.env.PHOVEA_SKIP_TESTS === undefined?1:0)\" || npm run test:python",
+    "prebuild:web": "node -e \"process.exit(process.env.PHOVEA_SKIP_TESTS === undefined?1:0)\" || npm run test:web",
+    "predist:python": "npm run build:python && npm run docs:python"
   },
   "files": [
     "src",
@@ -76,12 +79,12 @@
     "url": "https://github.com/phovea/phovea_processing_queue.git"
   },
   "devDependencies": {
-    "@types/jasmine": "2.5.40",
-    "awesome-typescript-loader": "3.0.0-beta.18",
+    "@types/jasmine": "2.5.41",
+    "awesome-typescript-loader": "3.0.3",
     "css-loader": "0.26.1",
+    "extract-text-webpack-plugin": "2.0.0-rc.3",
     "extract-loader": "0.1.0",
-    "extract-text-webpack-plugin": "2.0.0-beta.5",
-    "file-loader": "0.9.0",
+    "file-loader": "0.10.0",
     "html-loader": "0.4.4",
     "imports-loader": "0.7.0",
     "jasmine": "2.5.3",
@@ -92,18 +95,18 @@
     "karma-jasmine": "1.1.0",
     "karma-junit-reporter": "2.0.0",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "2.0.1",
+    "karma-webpack": "2.0.2",
     "mkdirp": "0.5.1",
-    "node-sass": "4.3.0",
+    "node-sass": "4.5.0",
     "null-loader": "0.1.1",
     "raw-loader": "0.5.1",
-    "sass-loader": "4.1.1",
+    "sass-loader": "5.0.0",
     "style-loader": "0.13.1",
-    "tslint": "4.3.1",
+    "tslint": "4.4.2",
     "typedoc": "0.5.5",
-    "typescript": "2.1.5",
+    "typescript": "2.2.0",
     "url-loader": "0.5.7",
-    "webpack": "2.2.0",
-    "webpack-dev-server": "2.2.0"
+    "webpack": "2.2.1",
+    "webpack-dev-server": "2.3.0"
   }
 }
