yo phovea:update

--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "docker:dev": "docker build -t phovea_processing_queue -f deploy/Dockerfile_dev .",
     "prepublish": "npm run build",
     "docs:web": "typedoc --options typedoc.json src/**.ts",
-    "docs:python": "echo todo creating docs...",
-    "build:python": "python -c \"from distutils.dir_util import mkpath ; mkpath('./build/source')\" && (tar -c ./phovea_processing_queue --exclude '*.pyc' | tar -xC build/source)",
+    "docs:python": "sphinx-apidoc -o docs -f ./phovea_processing_queue && sphinx-build ./docs build/docs",
+    "build:python": "python build.py",
     "build:web": "webpack --env prod",
     "prebuild:python": "node -e \"process.exit(process.env.PHOVEA_SKIP_TESTS === undefined?1:0)\" || npm run test:python",
     "prebuild:web": "node -e \"process.exit(process.env.PHOVEA_SKIP_TESTS === undefined?1:0)\" || npm run test:web",
