--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,10 +1,8 @@
-FROM python:2.7
+FROM caleydo/phovea_python:1.0
 
 MAINTAINER Samuel Gratzl <samuel.gratzl@datavisyn.io>
 WORKDIR /phovea
 RUN printf "from phovea_server import launch\nlaunch.run()\n" > ./launch.py
-
-RUN apt-get update
 
 # install dependencies last step such that everything before can be cached
 COPY requirements*.txt docker_packages.txt ./
