--- a/deploy/Dockerfile_dev
+++ b/deploy/Dockerfile_dev
@@ -1,11 +1,7 @@
-FROM python:2.7
+FROM caleydo/phovea_python:1.0-dev
 
 MAINTAINER Samuel Gratzl <samuel.gratzl@datavisyn.io>
 WORKDIR /phovea
-
-# install node
-RUN curl -sL https://deb.nodesource.com/setup_6.x | bash -
-RUN apt-get install -y nodejs
 
 # install dependencies last step such that everything before can be cached
 COPY requirements*.txt docker_packages.txt ./
