--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 celery[redis,auth,msgpack]==4.0.1
-phovea_data_redis==0.1.0
-phovea_server==0.1.0
+-e git+https://github.com/phovea/phovea_data_redis.git@develop#egg=phovea_data_redis
+-e git+https://github.com/phovea/phovea_server.git@develop#egg=phovea_server
