--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   "name": "phovea_processing_queue",
   "description": "Process long-running tasks in the background using Celery.",
   "homepage": "https://phovea.caleydo.org",
-  "version": "0.1.1-SNAPSHOT",
+  "version": "1.0.0",
   "author": {
     "name": "The Caleydo Team",
     "email": "contact@caleydo.org",
