--- a/package.json
+++ b/package.json
@@ -59,12 +59,12 @@
     "iojs": ">= 3"
   },
   "dependencies": {
-    "phovea_core": "2.0.0"
+    "phovea_core": "github:phovea/phovea_core#develop"
   },
   "name": "phovea_processing_queue",
   "description": "Process long-running tasks in the background using Celery.",
   "homepage": "https://phovea.caleydo.org",
-  "version": "2.0.0",
+  "version": "2.0.1-SNAPSHOT",
   "author": {
     "name": "The Caleydo Team",
     "email": "contact@caleydo.org",
