--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
     ],
     "baseUrl": "../",
     "noImplicitAny": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "src/**/*.ts",
