Using generator-phovea v3.0.0
Closes #18

- Update docker base images from `caleydo/phovea_python:v1.0` to `caleydo/phovea_python:v1.1`
- Update CircleCI config
- Update dev dependencies
- Update buildPython.js

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -43,6 +43,12 @@
     "unknown": {
       "requirements": [],
       "dockerPackages": []
+    },
+    "promptValues": {
+      "authorName": "The Caleydo Team",
+      "authorEmail": "contact@caleydo.org",
+      "authorUrl": "https://caleydo.org",
+      "githubAccount": "phovea"
     }
   }
 }
