--- a/deploy/Dockerfile_dev
+++ b/deploy/Dockerfile_dev
@@ -1,11 +1,14 @@
-FROM caleydo/phovea_python:v1.0-dev
+FROM caleydo/phovea_python:v1.1-dev
 
-MAINTAINER Samuel Gratzl <samuel.gratzl@datavisyn.io>
+LABEL maintainer="contact@caleydo.org"
 WORKDIR /phovea
 
 # install dependencies last step such that everything before can be cached
-COPY requirements*.txt docker_packages.txt ./
-RUN (!(test -f docker_packages.txt) || (cat docker_packages.txt | xargs apt-get install -y)) && pip install --no-cache-dir -r requirements.txt && (pip install --no-cache-dir -r requirements_dev.txt)
+COPY requirements*.txt docker_packages.txt docker_script*.sh ./
+RUN (!(test -f docker_packages.txt) || (apt-get -y update && cat docker_packages.txt | xargs apt-get install -y)) && \
+    pip install --no-cache-dir -r requirements.txt && \
+    (pip install --no-cache-dir -r requirements_dev.txt)
+RUN (!(test -f docker_script.sh) || bash ./docker_script.sh)
 
 ENV PHOVEA_ENV=dev
 ENV PHOVEA_SERVICE=celery
