--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
--e git+https://github.com/phovea/phovea_data_redis.git@develop#egg=phovea_data_redis
--e git+https://github.com/phovea/phovea_server.git@develop#egg=phovea_server
+phovea_data_redis>=4.0.0,<5.0.0
+phovea_server>=4.0.0,<5.0.0
 celery[redis,auth,msgpack]==4.0.1
