--- a/package.json
+++ b/package.json
@@ -1,43 +1,42 @@
 {
   "scripts": {
     "start": "webpack-dev-server --inline",
+    "predocker": "npm run build",
+    "docker": "docker build -t phovea_processing_queue -f deploy/Dockerfile .",
+    "docker:dev": "docker build -t phovea_processing_queue -f deploy/Dockerfile_dev .",
     "check": "flake8 --exclude=.git,venv,deploy,docs,__pycache__,node_modules",
     "pretest": "echo hybrid",
     "test": "npm run test:web && npm run test:python",
+    "docs": "npm run docs:web && npm run docs:python",
+    "prebuild": "echo hybrid",
+    "build": "npm run build:web && npm run build:python",
     "predist": "echo hybrid",
     "dist": "npm run dist:web && npm run dist:python",
     "compile": "tsc",
     "lint": "tslint -c tslint.json -p . 'src/**/*.ts?(x)' 'tests/**/*.ts?(x)'",
-    "docs": "npm run docs:web && npm run docs:python",
-    "prebuild": "echo hybrid",
     "posttest": "echo hybrid",
     "test:watch": "karma start --autoWatch=true --singleRun=false",
     "build:dev": "webpack",
-    "build": "npm run build:web && npm run build:python",
     "start:hot": "webpack-dev-server --inline --hot",
     "watch": "webpack --watch",
     "release:major": "npm version major && npm publish && git push --follow-tags",
     "release:minor": "npm version minor && npm publish && git push --follow-tags",
     "release:patch": "npm version patch && npm publish && git push --follow-tags",
-    "test:web": "test ! $(find tests -name \"*.ts\") || karma start",
-    "test:python": "test ! $(find tests -name \"*.py\") || python setup.py test",
-    "dist:web": "mkdirp dist && cd build && tar cvzf ../dist/phovea_processing_queue.tar.gz *",
-    "dist:python": "python setup.py sdist bdist_wheel",
+    "docs:web": "typedoc --options typedoc.json src/**.ts",
+    "docs:python": "sphinx-apidoc -o docs -f ./phovea_processing_queue && sphinx-build ./docs build/docs",
     "pretest:web": "npm run compile",
     "pretest:python": "npm run check",
     "posttest:web": "npm run lint",
-    "predist:web": "npm run build:web && npm run docs:web",
-    "predocker": "npm run build",
-    "docker": "docker build -t phovea_processing_queue -f deploy/Dockerfile .",
-    "docker:dev": "docker build -t phovea_processing_queue -f deploy/Dockerfile_dev .",
-    "prepublish": "npm run build",
-    "docs:web": "typedoc --options typedoc.json src/**.ts",
-    "docs:python": "sphinx-apidoc -o docs -f ./phovea_processing_queue && sphinx-build ./docs build/docs",
-    "build:python": "rm -rf build/source && find . -name '*.pyc' -delete && node buildPython.js && cp -r ./phovea_processing_queue build/source/",
-    "build:web": "webpack --env prod",
+    "test:web": "test ! $(find tests -name \"*.ts\") || karma start",
+    "test:python": "test ! $(find tests -name \"*.py\") || python setup.py test",
     "prebuild:python": "node -e \"process.exit(process.env.PHOVEA_SKIP_TESTS === undefined?1:0)\" || npm run test:python",
     "prebuild:web": "node -e \"process.exit(process.env.PHOVEA_SKIP_TESTS === undefined?1:0)\" || npm run test:web",
-    "predist:python": "npm run build:python && npm run docs:python"
+    "build:python": "rm -rf build/source && find . -name '*.pyc' -delete && node buildPython.js && cp -r ./phovea_processing_queue build/source/",
+    "build:web": "webpack --env prod",
+    "predist:web": "npm run build:web && npm run docs:web",
+    "predist:python": "npm run build:python && npm run docs:python",
+    "dist:web": "mkdirp dist && cd build && tar cvzf ../dist/phovea_processing_queue.tar.gz *",
+    "dist:python": "python setup.py sdist bdist_wheel"
   },
   "files": [
     "src",
