--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "scripts": {
+    "clean": "rimraf build dist && npm run clean:compile",
+    "clean:compile": "rimraf src/**/*.map src/**/*.js src/**/*.d.ts tests/**/*.js tests/**/*.map tests/**/*.d.ts demo/**/*.js demo/**/*.map demo/**/*.d.ts",
     "start": "webpack-dev-server --inline",
     "predocker": "npm run build",
     "docker": "docker build -t phovea_processing_queue -f deploy/Dockerfile .",
@@ -15,7 +17,7 @@
     "compile": "tsc",
     "lint": "tslint -c tslint.json -p . 'src/**/*.ts?(x)' 'tests/**/*.ts?(x)'",
     "posttest": "echo hybrid",
-    "test:watch": "karma start --autoWatch=true --singleRun=false",
+    "test:watch": "jest --watch",
     "build:dev": "webpack",
     "start:hot": "webpack-dev-server --inline --hot",
     "watch": "webpack --watch",
@@ -27,7 +29,7 @@
     "pretest:web": "npm run compile",
     "pretest:python": "npm run check",
     "posttest:web": "npm run lint",
-    "test:web": "test ! $(find tests -name \"*.ts\") || karma start",
+    "test:web": "test ! $(find tests -name \"*.ts\") || jest",
     "test:python": "test ! $(find tests -name \"*.py\") || python setup.py test",
     "prebuild:python": "node -e \"process.exit(process.env.PHOVEA_SKIP_TESTS === undefined?1:0)\" || npm run test:python",
     "prebuild:web": "node -e \"process.exit(process.env.PHOVEA_SKIP_TESTS === undefined?1:0)\" || npm run test:web",
