--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "iojs": ">= 3"
   },
   "dependencies": {
-    "phovea_core": "github:phovea/phovea_core#develop"
+    "phovea_core": "github:phovea/phovea_core#stoiber/testing_with_jest"
   },
   "name": "phovea_processing_queue",
   "description": "Process long-running tasks in the background using Celery.",
