--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "file-loader": "0.11.1",
     "fork-ts-checker-webpack-plugin": "0.4.1",
     "html-loader": "0.4.5",
+    "identity-obj-proxy": "^3.0.0",
     "imports-loader": "0.7.1",
     "jest": "^22.4.0",
     "jest-raw-loader": "1.0.1",
