--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "iojs": ">= 3"
   },
   "dependencies": {
-    "phovea_core": "github:phovea/phovea_core#develop"
+    "phovea_core": "^4.0.0"
   },
   "name": "phovea_processing_queue",
   "description": "Process long-running tasks in the background using Celery.",
