--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   "name": "phovea_processing_queue",
   "description": "Process long-running tasks in the background using Celery.",
   "homepage": "https://phovea.caleydo.org",
-  "version": "3.0.1-SNAPSHOT",
+  "version": "4.0.0",
   "author": {
     "name": "The Caleydo Team",
     "email": "contact@caleydo.org",
