--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "url": "https://github.com/phovea/phovea_processing_queue.git"
   },
   "devDependencies": {
-    "@types/jest": "23.3.13",
+    "@types/jest": "25.1.4",
     "awesome-typescript-loader": "3.1.2",
     "cache-loader": "1.2.0",
     "css-loader": "0.28.0",
@@ -92,7 +92,7 @@
     "html-loader": "0.4.5",
     "identity-obj-proxy": "^3.0.0",
     "imports-loader": "0.7.1",
-    "jest": "^22.4.0",
+    "jest": "^25.1.0",
     "jest-raw-loader": "1.0.1",
     "json-loader": "0.5.4",
     "node-sass": "^4.13.1",
@@ -105,7 +105,7 @@
     "ts-loader": "4.0.1",
     "tslib": "~1.11.0",
     "tslint": "5.9.1",
-    "ts-jest": "22.4.4",
+    "ts-jest": "^25.2.1",
     "typedoc": "~0.16.10",
     "typescript": "~3.8.2",
     "url-loader": "0.5.8",
