change config files

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "predist": "echo hybrid",
     "dist": "npm run dist:web && npm run dist:python",
     "compile": "tsc",
+    "compile:watch": "tsc -w",
     "lint": "tslint -c tslint.json -p . 'src/**/*.ts?(x)' 'tests/**/*.ts?(x)'",
     "posttest": "echo hybrid",
     "test:watch": "jest --watch",
@@ -40,8 +41,6 @@
   },
   "files": [
     "src",
-    "index.js",
-    "phovea.js",
     "phovea_registry.js",
     "dist",
     "phovea_processing_queue",
@@ -80,23 +79,15 @@
   },
   "devDependencies": {
     "@types/jest": "25.1.4",
-    "file-loader": "0.11.1",
-    "html-loader": "0.4.5",
     "identity-obj-proxy": "^3.0.0",
-    "ifdef-loader": "2.0.0",
-    "imports-loader": "0.7.1",
     "jest": "25.1.0",
     "jest-raw-loader": "1.0.1",
-    "node-sass": "^4.13.1",
-    "null-loader": "0.1.1",
-    "raw-loader": "0.5.1",
     "rimraf": "^3.0.0",
     "shx": "^0.3.2",
     "ts-jest": "25.2.1",
     "tslib": "~1.11.0",
     "tslint": "5.9.1",
     "typedoc": "~0.16.10",
-    "typescript": "~3.8.2",
-    "url-loader": "0.5.8"
+    "typescript": "~3.8.2"
   }
 }
