--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "clean": "rimraf lib dist && npm run clean:compile",
-    "clean:compile": "rimraf src/**/*.map src/**/*.js src/**/*.d.ts tests/**/*.js tests/**/*.map tests/**/*.d.ts demo/**/*.js demo/**/*.map demo/**/*.d.ts",
+    "clean": "rimraf lib dist",
+    "delete-dependencies": "rimraf node_modules",
     "start": "webpack-dev-server --inline",
     "predocker": "npm run build",
     "docker": "docker build -t phovea_processing_queue -f deploy/Dockerfile .",
@@ -60,7 +60,7 @@
     "iojs": ">= 3"
   },
   "dependencies": {
-    "phovea_core": "github:phovea/phovea_core#asteiner/refactoring"
+    "phovea_core": "github:phovea/phovea_core#develop"
   },
   "name": "phovea_processing_queue",
   "description": "Process long-running tasks in the background using Celery.",
