--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 celery[redis,auth,msgpack]==4.2.2
-phovea_data_redis>=release-7.0.0,<NaN.0.0
-phovea_server>=release-7.0.0,<NaN.0.0
+-e git+https://github.com/phovea/phovea_data_redis.git@release-7.0.0#egg=phovea_data_redis
+-e git+https://github.com/phovea/phovea_server.git@release-7.0.0#egg=phovea_server
