--- a/package.json
+++ b/package.json
@@ -60,12 +60,12 @@
     "iojs": ">= 3"
   },
   "dependencies": {
-    "phovea_core": "github:phovea/phovea_core#develop"
+    "phovea_core": "^7.0.0"
   },
   "name": "phovea_processing_queue",
   "description": "Process long-running tasks in the background using Celery.",
   "homepage": "https://phovea.caleydo.org",
-  "version": "6.0.1-SNAPSHOT",
+  "version": "6.1.0",
   "author": {
     "name": "The Caleydo Team",
     "email": "contact@caleydo.org",
