--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 celery[redis,auth,msgpack]==4.2.2
--e git+https://github.com/phovea/phovea_data_redis.git@develop#egg=phovea_data_redis
--e git+https://github.com/phovea/phovea_server.git@develop#egg=phovea_server
+phovea_data_redis>=7.2.0,<8.0.0
+phovea_server>=7.2.0,<8.0.0
